# VerseBridge

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: branch-check.yaml
configs/: default.json
doc/: README_RU.md
scripts/: help_strings_ner.json  help_strings_train.json  help_strings_translate.json  run_ner.py  run_preprocess.py  run_training.py  run_translation.py
src/config/: __init__.py  config_manager.py  config_profile_loader.py  dataset.py  generation.py  language.py  logging.py  lora.py  models.py  ner.py  paths.py  training.py  translation.py
src/ner/: __init__.py  convert_to_bio.py  extract_ner.py  ner_pipline.py  ner_training.py  review_ner_streamlit_app.py
src/preprocess/: __init__.py  data_splitter.py  ini_to_json_converter.py  json_cleaner.py  preprocess_pipeline.py  text_cleaner.py
src/training/: __init__.py  custom_callbacks.py  dataset_manager.py  metrics_calculator.py  training_pipeline.py
src/translate/: __init__.py  buffered_file_writer.py  ini_file_processor.py  text_processor.py  translation_pipeline.py  translator.py
src/type_defs/: custom_types.py
src/utils/: __init__.py  app_logger.py  arg_formatter.py  checkpoint_utils.py  file_utils.py  help_utils.py  logging_utils.py  memory_manager.py  model_initializer.py  ner_utils.py  system_utils.py  tokenizer_initializer.py
tests/: test_clean_data.py  test_config.py  test_config_profile_loader.py
